crates/wit-compiler/src/queries/snapshots/wit_compiler__queries__lowering__tests__flags_with_one_element.snap
---
source: crates/wit-compiler/src/queries/lowering.rs
info:
  src: "interface i { flags foo { first } }"
  ast: "(source_file (top_level_item (interface_item name: (identifier) items: (interface_items (typedef_item (flags_item name: (identifier) cases: (flags_case name: (identifier))))))))"
---
Package {
    decl: None,
    worlds: {},
    interfaces: {
        InterfaceIndex(0): Interface {
            name: i,
            docs: None,
            items: [
                Flags(
                    Flags {
                        name: foo,
                        index: FlagsIndex(0),
                        docs: None,
                        cases: [
                            FlagsCase {
                                name: first,
                                docs: None,
                            },
                        ],
                    },
                ),
            ],
        },
    },
}
