crates/wit-compiler/src/queries/snapshots/wit_compiler__queries__lowering__tests__func_with_multiple_arguments.snap
---
source: crates/wit-compiler/src/queries/lowering.rs
info:
  src: "interface i { f: func(first: u32, second: string, third: list<bool>); }"
  ast: "(source_file (top_level_item (interface_item name: (identifier) items: (interface_items (func_item name: (identifier) ty: (func_type params: (param_list params: (named_type name: (identifier) ty: (ty (builtins))) params: (named_type name: (identifier) ty: (ty (builtins))) params: (named_type name: (identifier) ty: (ty (list (ty (builtins))))))))))))"
---
Package {
    decl: None,
    worlds: {},
    interfaces: {
        InterfaceIndex(0): Interface {
            name: i,
            docs: None,
            items: [
                Func(
                    FuncItem {
                        name: f,
                        index: FuncItemIndex(0),
                        docs: None,
                        params: [
                            Parameter {
                                name: first,
                                ty: Builtin(
                                    U32,
                                ),
                            },
                            Parameter {
                                name: second,
                                ty: Builtin(
                                    String,
                                ),
                            },
                            Parameter {
                                name: third,
                                ty: List(
                                    Builtin(
                                        Boolean,
                                    ),
                                ),
                            },
                        ],
                        return_value: None,
                    },
                ),
            ],
        },
    },
}
