crates/wit-compiler/src/queries/snapshots/wit_compiler__queries__lowering__tests__list.snap
---
source: crates/wit-compiler/src/queries/lowering.rs
info:
  src: "interface i { type x = list<u32>; }"
  ast: "(source_file (top_level_item (interface_item name: (identifier) items: (interface_items (typedef_item (type_item name: (identifier) ty: (ty (list (ty (builtins))))))))))"
---
Package {
    docs: None,
    id: None,
    worlds: {},
    interfaces: {
        InterfaceIndex {
            file: FilePath(
                Id {
                    value: 1,
                },
            ),
            index: RawIndex(
                1,
            ),
        }: Interface {
            name: Ident(
                Id {
                    value: 1,
                },
            ),
            docs: None,
            items: [
                Type(
                    TypeAlias(
                        TypeAlias {
                            name: Ident(
                                Id {
                                    value: 2,
                                },
                            ),
                            index: TypeAliasIndex {
                                file: FilePath(
                                    Id {
                                        value: 1,
                                    },
                                ),
                                index: RawIndex(
                                    1,
                                ),
                            },
                            docs: None,
                            ty: List(
                                Builtin(
                                    U32,
                                ),
                            ),
                        },
                    ),
                ),
            ],
        },
    },
}
