crates/wit-compiler/src/queries/snapshots/wit_compiler__queries__lowering__tests__record_with_one_field.snap
---
source: crates/wit-compiler/src/queries/lowering.rs
info:
  src: "interface i { record foo { field: string } }"
  ast: "(source_file (top_level_item (interface_item name: (identifier) items: (interface_items (typedef_item (record_item name: (identifier) fields: (record_field name: (identifier) ty: (ty (builtins)))))))))"
---
Package {
    docs: None,
    id: None,
    worlds: {},
    interfaces: {
        InterfaceIndex {
            file: FilePath(
                Id {
                    value: 1,
                },
            ),
            index: RawIndex(
                1,
            ),
        }: Interface {
            name: Ident(
                Id {
                    value: 1,
                },
            ),
            docs: None,
            items: [
                Type(
                    Record(
                        Record {
                            name: Ident(
                                Id {
                                    value: 3,
                                },
                            ),
                            index: RecordIndex {
                                file: FilePath(
                                    Id {
                                        value: 1,
                                    },
                                ),
                                index: RawIndex(
                                    1,
                                ),
                            },
                            docs: None,
                            fields: [
                                RecordField {
                                    name: Ident(
                                        Id {
                                            value: 2,
                                        },
                                    ),
                                    docs: None,
                                    ty: Builtin(
                                        String,
                                    ),
                                },
                            ],
                        },
                    ),
                ),
            ],
        },
    },
}
